--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -23,19 +23,17 @@
     margin-top: 0;
     margin-bottom: 0;
     color: var(--hero-text-color);
-
-    font-size: 14px;
-    line-height: 1.71;
-    font-style: normal;
+    @include font(14px, null, 1.71, null);
+    
+    
 }
 
 .address .mail,
 .address .tel {
     color: rgba(255, 255, 255, 0.6);
 
-    font-size: 14px;
-    line-height: 1.71;
-    font-style: normal;
+    
+    @include font(14px, null, 1.71, null);
     text-decoration: none;
 }
 
@@ -54,11 +52,8 @@
 .welcome-text {
     margin: 0;
     text-transform: uppercase;
-
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
+    @include font(14px, 700, 1.14, null);
+   
     color: var(--hero-text-color);
 }
 
@@ -83,16 +78,17 @@
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+         background-color: var(--accent-text-color);
+        }
 }
 
 .welcome-link-icon {
     fill: var(--hero-text-color);
 }
 
-.welcome-soc-link:hover,
-.welcome-soc-link:focus {
-    background-color: var(--accent-text-color);
-}
+
 .subscribe-field {
     margin-left: 93px;
 }
@@ -119,10 +115,8 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0.15);
-
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
+    @include font(16px, null, 1.25, null);
+    
 
     color: rgba(255, 255, 255, 0.6);
 }
