--- a/css/main.css
+++ b/css/main.css
@@ -90,9 +90,10 @@ body {
 .logo {
   color: var(--accent-text-color);
   font-family: Raleway, sans-serif;
-  font-weight: 700;
   font-size: 26px;
-  line-height: 1, 19;
+  font-weight: 700;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
   text-decoration: none;
 }
 .logo--up {
@@ -115,15 +116,14 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  color: var(--main-text-color);
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.navigation__link__link:hover, .navigation__link__link:focus {
+.navigation__link:hover, .navigation__link:focus {
   color: var(--accent-text-color);
 }
 
@@ -135,8 +135,8 @@ body {
   display: flex;
   align-items: center;
   color: var(--secondary-text-color);
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
@@ -166,25 +166,24 @@ body {
   color: var(--hero-text-color);
   cursor: pointer;
   font-family: inherit;
-  font-weight: 700;
   font-size: 16px;
+  font-weight: 700;
   line-height: 1.86;
   letter-spacing: 0.06em;
   text-align: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.hero-button:hover,
-.hero-button:focus {
+.hero-button:hover, .hero-button:focus {
   background-color: #188ce8;
 }
 
 .modal-title {
   margin-top: 0;
   margin-bottom: 12px;
-  font-weight: 700;
   font-size: 20px;
+  font-weight: 700;
   line-height: 1.15;
+  letter-spacing: 0.03em;
   text-align: center;
   color: var(--main-text-color);
 }
@@ -198,6 +197,9 @@ body {
   padding-left: 42px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal-input:focus {
+  border: 1px solid var(--accent-text-color);
+}
 
 .modal-field {
   margin-bottom: 10px;
@@ -207,20 +209,12 @@ body {
   margin-bottom: 20px;
 }
 
-.modal-comment::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
 .modal-label {
-  font-weight: 400;
   font-size: 12px;
+  font-weight: 400;
   line-height: 1.17;
-  margin-bottom: 4px;
   letter-spacing: 0.01em;
+  margin-bottom: 4px;
   color: var(--secondary-text-color);
 }
 
@@ -234,12 +228,13 @@ body {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 12px 16px;
 }
-
-.modal-input:focus + .input-icon {
-  fill: var(--accent-text-color);
+.modal-comment::placeholder {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
-
-.modal-input:focus,
 .modal-comment:focus {
   border: 1px solid var(--accent-text-color);
 }
@@ -253,6 +248,9 @@ body {
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
+}
+.modal-input:focus + .input-icon {
+  fill: var(--accent-text-color);
 }
 
 .modal-policy {
@@ -268,9 +266,10 @@ body {
 }
 
 .modal-policy-text {
-  font-weight: 400;
   font-size: 14px;
+  font-weight: 400;
   line-height: 1.71;
+  letter-spacing: 0.03em;
   color: #757575;
 }
 
@@ -289,12 +288,10 @@ body {
   justify-content: center;
   margin-right: 7px;
 }
-
 .modal-check:checked + .modal-custom-check {
   border: 2px solid var(--accent-text-color);
   background-color: var(--accent-text-color);
 }
-
 .modal-check:focus + .modal-custom-check {
   border: 2px solid var(--accent-text-color);
 }
@@ -345,9 +342,7 @@ body {
 .close-button {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-close-btn:hover .close-button,
-.modal-close-btn:focus .close-button {
+.modal-close-btn:hover .close-button, .modal-close-btn:focus .close-button {
   fill: var(--accent-text-color);
 }
 
@@ -355,9 +350,10 @@ body {
   margin-top: 0;
   margin-bottom: 50px;
   color: var(--main-text-color);
-  font-weight: 700;
   font-size: 36px;
+  font-weight: 700;
   line-height: 1.17;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -408,8 +404,8 @@ body {
   margin-bottom: 30px;
   max-width: 696px;
   color: var(--hero-text-color);
-  font-weight: 900;
   font-size: 44px;
+  font-weight: 900;
   line-height: 1.36;
   text-transform: uppercase;
 }
@@ -443,9 +439,10 @@ body {
   margin-top: 0;
   margin-bottom: 10px;
   color: var(--main-text-color);
-  font-weight: 700;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
@@ -454,7 +451,9 @@ body {
   margin-bottom: 0;
   color: var(--secondary-text-color);
   font-size: 14px;
+  font-weight: 400;
   line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .case {
@@ -478,9 +477,10 @@ body {
   left: 0;
   margin: 0;
   text-align: center;
-  font-weight: 700;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -495,7 +495,6 @@ body {
   width: 170px;
   height: 92px;
 }
-
 .clients-item + .clients-item {
   margin-left: 30px;
 }
@@ -512,9 +511,7 @@ body {
   color: #afb1b8;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   border: 1px solid var(--accent-text-color);
   color: var(--accent-text-color);
 }
@@ -549,7 +546,6 @@ body {
   color: var(--hero-text-color);
   font-size: 14px;
   line-height: 1.71;
-  font-style: normal;
 }
 
 .address .mail,
@@ -557,7 +553,6 @@ body {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.71;
-  font-style: normal;
   text-decoration: none;
 }
 
@@ -576,10 +571,9 @@ body {
 .welcome-text {
   margin: 0;
   text-transform: uppercase;
-  font-weight: 700;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   color: var(--hero-text-color);
 }
 
@@ -603,14 +597,12 @@ body {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.welcome-soc-link:hover, .welcome-soc-link:focus {
+  background-color: var(--accent-text-color);
+}
 
 .welcome-link-icon {
   fill: var(--hero-text-color);
-}
-
-.welcome-soc-link:hover,
-.welcome-soc-link:focus {
-  background-color: var(--accent-text-color);
 }
 
 .subscribe-field {
@@ -638,7 +630,6 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: rgba(0, 0, 0, 0.15);
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
@@ -668,15 +659,16 @@ body {
   justify-content: center;
 }
 
-.team-portfolio {
+.portfolio-list {
   margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.team-portfolio .portfolio-item {
+.portfolio-item {
   width: calc((100% - 60px) / 3);
+  position: relative;
 }
 
 .item-card {
@@ -693,18 +685,18 @@ body {
   margin-bottom: 4px;
   margin-top: 0;
   color: var(--main-text-color);
-  font-weight: 700;
   font-size: 18px;
+  font-weight: 700;
   line-height: 2;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.06;
 }
 
-.portfolio .buttons {
+.buttons-list {
   display: flex;
   justify-content: center;
 }
 
-.buttons .buttons-item + .buttons-item {
+.buttons-item + .buttons-item {
   margin-left: 8px;
 }
 
@@ -719,42 +711,25 @@ body {
   cursor: pointer;
   text-align: center;
   font-family: inherit;
-  font-weight: 500;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.63;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.portfolio-button:hover,
-.portfolio-button:focus {
+.portfolio-button:hover, .portfolio-button:focus {
   background-color: var(--accent-text-color);
   color: var(--hero-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.team-portfolio .portfolio-item {
-  position: relative;
-}
-
-.portfolio a {
+.portfolio-link {
   display: block;
   text-decoration: none;
   width: 100%;
   height: 100%;
-}
-
-.team-portfolio-link {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.team-portfolio-link:hover .portfolio-top-text,
-.team-portfolio-link:focus .portfolio-top-text {
-  transform: translateY(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-portfolio-link:hover,
-.team-portfolio-link:focus {
+.portfolio-link:hover, .portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -783,13 +758,14 @@ body {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
-  margin: 0;
   padding-top: 63px;
   padding-left: 24px;
   padding-right: 24px;
   padding-bottom: 63px;
-  font-weight: 400;
-  letter-spacing: 0.03em;
+}
+.portfolio-link:hover .portfolio-top-text, .portfolio-link:focus .portfolio-top-text {
+  transform: translateY(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team {
@@ -815,8 +791,8 @@ body {
   margin-top: 0;
   margin-bottom: 10px;
   color: var(--main-text-color);
-  font-weight: 500;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.19;
 }
 .team__position {
