--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -9,15 +9,14 @@
     color: var(--hero-text-color);
     cursor: pointer;
     font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.86;
-    letter-spacing: 0.06em;
+
+    @include font(16px, 700, 1.86, 0.06em);
+    
     text-align: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+            background-color: #188ce8;
+        }
 }
 
-.hero-button:hover,
-.hero-button:focus {
-    background-color: #188ce8;
-}
