--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -5,10 +5,9 @@
             display: flex;
             align-items: center;
             color: var(--secondary-text-color);
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 1.14;
-            letter-spacing: 0.02em;
+
+            @include font(14px, 500, 1.14, 0.02em);
+            
             text-decoration: none;
             transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             padding-top: 32px;
