--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,9 +1,8 @@
 .modal-title {
     margin-top: 0;
     margin-bottom: 12px;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
+    @include font(20px, 700, 1.15, 0.03em);
+    
     text-align: center;
 
     color: var(--main-text-color);
@@ -17,6 +16,9 @@
     outline: none;
     padding-left: 42px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus{
+            border: 1px solid var(--accent-text-color);
+        }
 }
 
 .modal-field {
@@ -27,23 +29,9 @@
     margin-bottom: 20px;
 }
 
-.modal-comment::placeholder {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-
-    color: rgba(117, 117, 117, 0.5);
-}
-
 .modal-label {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
+    @include font(12px, 400, 1.17, 0.01em); 
     margin-bottom: 4px;
-
-    letter-spacing: 0.01em;
-
     color: var(--secondary-text-color);
 }
 
@@ -56,15 +44,14 @@
     resize: none;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 12px 16px;
-}
-
-.modal-input:focus+.input-icon {
-    fill: var(--accent-text-color);
-}
-
-.modal-input:focus,
-.modal-comment:focus {
-    border: 1px solid var(--accent-text-color);
+    &::placeholder {
+            @include font(14px, 400, 1.14, 0.01em);          
+            
+            color: rgba(117, 117, 117, 0.5);
+        }
+    &:focus {
+        border: 1px solid var(--accent-text-color);
+    }
 }
 
 .input-wrap {
@@ -76,6 +63,9 @@
     left: 12px;
     top: 50%;
     transform: translateY(-50%);
+    .modal-input:focus + & {
+            fill: var(--accent-text-color);
+        }
 }
 
 .modal-policy {
@@ -91,10 +81,7 @@
 }
 
 .modal-policy-text {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-
+    @include font(14px, 400, 1.71, 0.03em);
     color: #757575;
 }
 
@@ -112,13 +99,15 @@
     align-items: center;
     justify-content: center;
     margin-right: 7px;
+
+    .modal-check:checked + & {
+            border: 2px solid var(--accent-text-color);
+            background-color: var(--accent-text-color);
+        }
+    .modal-check:focus + & {
+        border: 2px solid var(--accent-text-color);
+    }
 }
 
-.modal-check:checked+.modal-custom-check {
-    border: 2px solid var(--accent-text-color);
-    background-color: var(--accent-text-color);
-}
 
-.modal-check:focus+.modal-custom-check {
-    border: 2px solid var(--accent-text-color);
-}
+
