--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,9 +1,8 @@
 .logo {
     color: var(--accent-text-color);
     font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1, 19;
+    @include font(26px, 700, 1.19, 0.03em);
+    
     text-decoration: none;
     &--up {
             color: var(--main-text-color);
