--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -45,9 +45,9 @@
 
 .close-button {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .modal-close-btn:hover &,
+    .modal-close-btn:focus & {
+            fill: var(--accent-text-color);
+        }
 }
 
-.modal-close-btn:hover .close-button,
-.modal-close-btn:focus .close-button {
-    fill: var(--accent-text-color);
-}
