--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -11,18 +11,19 @@
         display: block;
         padding-top: 32px;
         padding-bottom: 32px;
-        color: var(--main-text-color);
+            
 
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
+        @include font(14px, 500, 1.14, 0.02em);
         text-decoration: none;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        &__link:hover,
-        &__link:focus {
-            color: var(--accent-text-color);
-        }
+            
+        &:hover,
+        &:focus {
+            color: var(--accent-text-color);}
     }
-}
+
+}      
+        
+
+
 
