--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -2,8 +2,8 @@
     margin-top: 0;
     margin-bottom: 50px;
     color: var(--main-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+
+    @include font(36px, 700, 1.17, 0.03em);
+    
     text-align: center;
 }
