--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -27,15 +27,13 @@
     margin-top: 0;
     margin-bottom: 10px;
     color: var(--main-text-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
+    @include font(14px, 700, 1.14, 0.03em);    
     text-transform: uppercase;
 }
 .benefits p {
     margin-top: 0;
     margin-bottom: 0;
     color: var(--secondary-text-color);
-    font-size: 14px;
-    line-height: 1.71;
+    @include font(14px, 400, 1.71, 0.03em);
+    
 }
