--- a/sass/layout/_case.scss
+++ b/sass/layout/_case.scss
@@ -22,10 +22,8 @@
     margin: 0;
 
     text-align: center;
+    @include font(14px, 700, 1.14, 0.03em);
 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
 
     text-transform: uppercase;
 
