--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -7,10 +7,10 @@
 .clients-item {
     width: 170px;
     height: 92px;
-}
-
-.clients-item+.clients-item {
-    margin-left: 30px;
+    & + & {
+        margin-left: 30px;
+    }
+    
 }
 
 .clients-link {
@@ -25,12 +25,11 @@
     color: #afb1b8;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-link:hover,
-.clients-link:focus {
-    border: 1px solid var(--accent-text-color);
-    color: var(--accent-text-color);
+    &:hover,
+    &:focus {
+        border: 1px solid var(--accent-text-color);
+        color: var(--accent-text-color);
+    }
 }
 
 .clients-icon {
