--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,12 +1,13 @@
-.team-portfolio {
+.portfolio-list {
     margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
 
-.team-portfolio .portfolio-item {
+.portfolio-item {
     width: calc((100% - 60px) / 3);
+    position: relative;
 }
 
 .item-card {
@@ -23,18 +24,16 @@
     margin-top: 0;
 
     color: var(--main-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+    @include font(18px, 700, 2, 0.06);
+  
 }
 
-.portfolio .buttons {
+.buttons-list {
     display: flex;
     justify-content: center;
 }
 
-.buttons .buttons-item+.buttons-item {
+.buttons-item+.buttons-item {
     margin-left: 8px;
 }
 
@@ -49,49 +48,35 @@
     background-color: #f5f4fa;
     cursor: pointer;
     text-align: center;
-
     font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
+    @include font(16px, 500, 1.63, null);
+    
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        background-color: var(--accent-text-color);
+        color: var(--hero-text-color);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+        }
 }
 
-.portfolio-button:hover,
-.portfolio-button:focus {
-    background-color: var(--accent-text-color);
-    color: var(--hero-text-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-}
 
-.team-portfolio .portfolio-item {
-    position: relative;
-}
 
-.portfolio a {
+
+.portfolio-link {
     display: block;
     text-decoration: none;
     width: 100%;
     height: 100%;
-}
-
-.team-portfolio-link {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-portfolio-link:hover .portfolio-top-text,
-.team-portfolio-link:focus .portfolio-top-text {
-    transform: translateY(0);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-portfolio-link:hover,
-.team-portfolio-link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
 .item-card p {
@@ -113,19 +98,18 @@
     left: 0;
     color: #ffffff;
     background-color: rgba(33, 150, 243, 0.9);
-    font-size: 18px;
-    line-height: 1.56;
+    @include font(18px, null, 1.56, null);
     height: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     overflow: auto;
-    margin: 0;
     padding-top: 63px;
     padding-left: 24px;
     padding-right: 24px;
-    padding-bottom: 63px;
-
-    font-weight: 400;
-
-    letter-spacing: 0.03em;
+    padding-bottom: 63px;    
+    .portfolio-link:hover &,
+    .portfolio-link:focus & {
+        transform: translateY(0);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
