--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -23,23 +23,23 @@
         margin-top: 0;
         margin-bottom: 10px;
         color: var(--main-text-color);
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.19;
+        @include font(16px, 500, 1.19, null);
+        
     }
     &__position {
         
         margin-top: 0;
         margin-bottom: 16px;
         color: var(--secondary-text-color);
-        font-size: 16px;
-        line-height: 1.19;
+        @include font(16px, null, 1.19, null);
+        
     }
     &__icon-list {
         display: flex;
         justify-content: center;
         align-items: center;
         gap: 10px;
+        
         
     }
     &__soc-link {
@@ -75,7 +75,4 @@
     }
     
 }
-
-
-
 
