--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@
   --hero-text-color: #ffffff;
   --background-primary-color: #ffffff;
   --background-secondary-color: #2f303a;
+  --background-hover-btn:#188ce8;
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -121,7 +123,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
 }
 .navigation__link:hover, .navigation__link:focus {
   color: var(--accent-text-color);
@@ -140,7 +142,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -171,10 +173,10 @@ body {
   line-height: 1.86;
   letter-spacing: 0.06em;
   text-align: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
 }
 .hero-button:hover, .hero-button:focus {
-  background-color: #188ce8;
+  background-color: var(--background-hover-btn);
 }
 
 .modal-title {
@@ -195,7 +197,7 @@ body {
   border-radius: 4px;
   outline: none;
   padding-left: 42px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border var(--transition);
 }
 .modal-input:focus {
   border: 1px solid var(--accent-text-color);
@@ -225,7 +227,7 @@ body {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border var(--transition);
   padding: 12px 16px;
 }
 .modal-comment::placeholder {
@@ -270,7 +272,7 @@ body {
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--secondary-text-color);
 }
 
 .modal-link {
@@ -303,7 +305,7 @@ body {
   left: 0;
   top: 0;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity var(--transition), visibility var(--transition);
 }
 
 .backdrop.is-hidden .modal {
@@ -314,13 +316,13 @@ body {
   width: 100%;
   position: absolute;
   max-width: 528px;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--background-primary-color);
   position: absolute;
   top: 50%;
   left: 50%;
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1) rotate(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--transition);
   padding: 40px;
 }
 
@@ -340,7 +342,7 @@ body {
 }
 
 .close-button {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--transition);
 }
 .modal-close-btn:hover .close-button, .modal-close-btn:focus .close-button {
   fill: var(--accent-text-color);
@@ -371,7 +373,7 @@ body {
   left: 0;
   bottom: -1px;
   margin-bottom: 0;
-  background-color: #2196f3;
+  background-color: var(--accent-text-color);
   border-radius: 2px;
   position: absolute;
 }
@@ -482,7 +484,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--hero-text-color);
 }
 
 .clients-list {
@@ -509,7 +511,7 @@ body {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: #afb1b8;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border var(--transition), color var(--transition);
 }
 .clients-link:hover, .clients-link:focus {
   border: 1px solid var(--accent-text-color);
@@ -595,7 +597,7 @@ body {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
 }
 .welcome-soc-link:hover, .welcome-soc-link:focus {
   background-color: var(--accent-text-color);
@@ -714,7 +716,7 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.63;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--transition), color var(--transition), background-color var(--transition);
 }
 .portfolio-button:hover, .portfolio-button:focus {
   background-color: var(--accent-text-color);
@@ -727,7 +729,7 @@ body {
   text-decoration: none;
   width: 100%;
   height: 100%;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--transition);
 }
 .portfolio-link:hover, .portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -750,13 +752,13 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  color: #ffffff;
+  color: var(--hero-text-color);
   background-color: rgba(33, 150, 243, 0.9);
   font-size: 18px;
   line-height: 1.56;
   height: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--transition);
   overflow: auto;
   padding-top: 63px;
   padding-left: 24px;
@@ -765,7 +767,7 @@ body {
 }
 .portfolio-link:hover .portfolio-top-text, .portfolio-link:focus .portfolio-top-text {
   transform: translateY(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--transition);
 }
 
 .team {
@@ -816,14 +818,14 @@ body {
   height: 44px;
   border-radius: 50%;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
 }
 .team__soc-link:hover, .team__soc-link:focus {
   background-color: var(--accent-text-color);
 }
 .team__link-icon {
   fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--transition);
 }
 .team__link-icon:hover, .team__link-icon:focus {
   background-color: var(--accent-text-color);
