--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -13,10 +13,10 @@
     @include font(16px, 700, 1.86, 0.06em);
     
     text-align: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color var(--transition);
     &:hover,
     &:focus {
-            background-color: #188ce8;
+            background-color: var(--background-hover-btn);
         }
 }
 
