--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -9,7 +9,7 @@
             @include font(14px, 500, 1.14, 0.02em);
             
             text-decoration: none;
-            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            transition: color var(--transition);
             padding-top: 32px;
             padding-bottom: 32px;
         }
