--- a/sass/components/_current.scss
+++ b/sass/components/_current.scss
@@ -12,7 +12,7 @@
             bottom: -1px;
     
             margin-bottom: 0;
-            background-color: #2196f3;
+            background-color: var(--accent-text-color);
             border-radius: 2px;
             position: absolute;
         }
