--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -15,7 +15,7 @@
     border-radius: 4px;
     outline: none;
     padding-left: 42px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border var(--transition);
     &:focus{
             border: 1px solid var(--accent-text-color);
         }
@@ -42,7 +42,7 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     resize: none;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border var(--transition);
     padding: 12px 16px;
     &::placeholder {
             @include font(14px, 400, 1.14, 0.01em);          
@@ -82,7 +82,7 @@
 
 .modal-policy-text {
     @include font(14px, 400, 1.71, 0.03em);
-    color: #757575;
+    color:var(--secondary-text-color);
 }
 
 .modal-link {
