--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,8 +5,8 @@
     left: 0;
     top: 0;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity var(--transition),
+        visibility var(--transition);
 }
 
 .backdrop.is-hidden .modal {
@@ -18,13 +18,13 @@
     position: absolute;
     max-width: 528px;
 
-    background-color: rgba(255, 255, 255, 1);
+    background-color: var(--background-primary-color);
     position: absolute;
     top: 50%;
     left: 50%;
     border-radius: 4px;
     transform: translate(-50%, -50%) scale(1) rotate(0);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform var(--transition);
     padding: 40px;
 }
 
@@ -44,7 +44,7 @@
 }
 
 .close-button {
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill var(--transition);
     .modal-close-btn:hover &,
     .modal-close-btn:focus & {
             fill: var(--accent-text-color);
