--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -15,7 +15,7 @@
 
         @include font(14px, 500, 1.14, 0.02em);
         text-decoration: none;
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: color var(--transition);
             
         &:hover,
         &:focus {
