--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -77,7 +77,7 @@
     background: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color var(--transition);
     &:hover,
     &:focus {
          background-color: var(--accent-text-color);
