--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -51,9 +51,9 @@
     font-family: inherit;
     @include font(16px, 500, 1.63, null);
     
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow var(--transition),
+        color var(--transition),
+        background-color var(--transition);
     &:hover,
     &:focus {
         background-color: var(--accent-text-color);
@@ -71,7 +71,7 @@
     text-decoration: none;
     width: 100%;
     height: 100%;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow var(--transition);
     &:hover,
     &:focus {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -96,12 +96,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    color: #ffffff;
+    color: var(--hero-text-color);
     background-color: rgba(33, 150, 243, 0.9);
     @include font(18px, null, 1.56, null);
     height: 100%;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform var(--transition);
     overflow: auto;
     padding-top: 63px;
     padding-left: 24px;
@@ -110,6 +110,6 @@
     .portfolio-link:hover &,
     .portfolio-link:focus & {
         transform: translateY(0);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: transform var(--transition);
     }
 }
