--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -52,7 +52,7 @@
         
         border-radius: 50%;
         cursor: pointer;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color var(--transition);
         &:hover,
         &:focus {
             background-color: var(--accent-text-color);
@@ -63,7 +63,7 @@
     
     &__link-icon {
         fill: #afb1b8;
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: fill var(--transition);
         &:hover,
         &:focus {
             background-color: var(--accent-text-color);
