--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,4 +6,10 @@
 
     --background-primary-color: #ffffff;
     --background-secondary-color: #2f303a;
+    --background-hover-btn:#188ce8;
+
+    
+    --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
